<resources>
    <string name="app_name">antPlayer</string>
    <string name="fragment_library_title">Library</string>
    <string name="fragment_files_title">Music</string>
    <string name="Cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="songs">song(s)</string>
    <string name="fragment_folder_select_title">Select Folder</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Undefined</string>
    <string name="unknown">Unknown</string>
    <string name="fragment_files_albums">Albums</string>
    <string name="fragment_files_artists">Artists</string>
    <string name="fragment_files_musics">Musics</string>
    <string name="fragment_files_folders">Folders</string>
    <string name="fragment_files_playlist">Playlist</string>
    <string name="root_folder">library</string>
    <string name="fragment_now_playing_title">Now Playing</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="menu_play">Play</string>
    <string name="menu_add_to_playlist">Add To Playlist</string>
    <string name="menu_current_playlist">Current Playlist</string>
    <string name="menu_new_playlist">New Playlist</string>
    <string name="menu_select_playlist">Select Playlist</string>

    <string-array name="files_menu">
        <item>@string/menu_play</item>
        <item>@string/menu_add_to_playlist</item>
    </string-array>

    <string-array name="files_menu_new_playlist">
        <item>@string/menu_current_playlist</item>
        <item>@string/menu_new_playlist</item>
    </string-array>

    <string-array name="files_menu_playlist">
        <item>@string/menu_current_playlist</item>
        <item>@string/menu_new_playlist</item>
        <item>@string/menu_select_playlist</item>
    </string-array>
</resources>
